--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-# data
+# ignore .gitignore
+.gitignore
+
+# ignore data
 installment2_id03.csv
 installment2_evaluation_data.csv
+train_df.csv
+dev_df.csv
+test_df.csv
+
+# ignore task description
+installment2_problem.pdf
